form can ve submitted, lines are not truncated and button is fixed

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -29,6 +29,11 @@
   &--form {
     box-sizing: border-box;
     border: 0;
+    position: absolute;
+    margin-top: 10px;
+    @include onDesktopSmall {
+      margin-top: 140px;
+    }
   }
 
   &--header {
