--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -31,6 +31,11 @@
     outline: none;
   }
 
+  &:-webkit-autofill {
+    -webkit-text-fill-color: $green-dark !important;
+    -webkit-box-shadow: 0 0 0 1000px $color-background inset !important;
+  }
+
   &--text-area {
     font-family: inherit;
     height: 25px;
